--- a/web/package.json
+++ b/web/package.json
@@ -4,16 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "bunx --bun vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "solid-js": "^1.7.8"
+    "@solidjs/router": "^0.9.0",
+    "lucide-solid": "^0.292.0",
+    "solid-js": "^1.7.8",
+    "vite-plugin-checker": "^0.6.2"
   },
   "devDependencies": {
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vite-plugin-solid": "^2.7.0"
+    "vite-plugin-solid": "^2.7.0",
+    "vite-plugin-solid-svg": "^0.7.0"
   }
 }
