--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.9.0",
+    "@tanstack/solid-query": "^5.8.3",
+    "@zag-js/solid": "^0.29.0",
+    "@zag-js/tooltip": "^0.29.0",
     "lucide-solid": "^0.292.0",
     "solid-js": "^1.7.8",
     "vite-plugin-checker": "^0.6.2"
