--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@modular-forms/solid": "^0.20.0",
     "@solidjs/router": "^0.9.0",
     "@tanstack/solid-query": "^5.8.3",
-    "@zag-js/solid": "^0.29.0",
-    "@zag-js/tooltip": "^0.29.0",
+    "@zag-js/combobox": "^0.30.0",
+    "@zag-js/solid": "^0.30.0",
+    "@zag-js/tooltip": "^0.30.0",
     "lucide-solid": "^0.292.0",
     "solid-js": "^1.8.5",
+    "valibot": "^0.20.1",
     "vite-plugin-checker": "^0.6.2"
   },
   "devDependencies": {
