--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@solidjs/router": "^0.9.0",
     "@tanstack/solid-query": "^5.8.3",
     "@zag-js/combobox": "^0.30.0",
+    "@zag-js/dialog": "^0.30.0",
     "@zag-js/solid": "^0.30.0",
     "@zag-js/tooltip": "^0.30.0",
     "lucide-solid": "^0.292.0",
