--- a/web/package.json
+++ b/web/package.json
@@ -16,14 +16,16 @@
     "@zag-js/dialog": "^0.30.0",
     "@zag-js/solid": "^0.30.0",
     "@zag-js/tooltip": "^0.30.0",
+    "apexcharts": "^3.44.0",
     "lucide-solid": "^0.292.0",
+    "solid-apexcharts": "^0.3.2",
     "solid-js": "^1.8.5",
-    "valibot": "^0.20.1",
-    "vite-plugin-checker": "^0.6.2"
+    "valibot": "^0.20.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
+    "vite": "^5.0.0",
+    "vite-plugin-checker": "^0.6.2",
     "vite-plugin-solid": "^2.7.2",
     "vite-plugin-solid-svg": "^0.7.0"
   }
