--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "generate": "bunx drizzle-kit generate:sqlite --out ./src/db/migrations --breakpoints --schema=./src/db/schema/index.ts",
+    "migrate": "bun run src/db/migrate.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.3.6",
