--- a/web/package.json
+++ b/web/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@elysiajs/eden": "^0.7.4",
     "@modular-forms/solid": "^0.20.0",
     "@solidjs/router": "^0.9.0",
     "@tanstack/solid-query": "^5.8.3",
@@ -17,14 +18,16 @@
     "@zag-js/solid": "^0.30.0",
     "@zag-js/tooltip": "^0.30.0",
     "apexcharts": "^3.44.0",
+    "elysia": "^0.7.29",
     "lucide-solid": "^0.292.0",
     "solid-apexcharts": "^0.3.2",
     "solid-js": "^1.8.5",
-    "valibot": "^0.20.1"
+    "valibot": "^0.20.1",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.4",
     "vite-plugin-checker": "^0.6.2",
     "vite-plugin-solid": "^2.7.2",
     "vite-plugin-solid-svg": "^0.7.0"
