--- a/web/package.json
+++ b/web/package.json
@@ -9,27 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@elysiajs/eden": "^0.7.4",
+    "@elysiajs/eden": "^0.7.6",
     "@modular-forms/solid": "^0.20.0",
     "@solidjs/router": "^0.9.0",
     "@tanstack/solid-query": "^5.8.3",
-    "@zag-js/combobox": "^0.30.0",
-    "@zag-js/dialog": "^0.30.0",
-    "@zag-js/solid": "^0.30.0",
-    "@zag-js/tooltip": "^0.30.0",
-    "apexcharts": "^3.44.0",
-    "elysia": "^0.7.29",
+    "@zag-js/combobox": "^0.31.1",
+    "@zag-js/dialog": "^0.31.1",
+    "@zag-js/solid": "^0.31.1",
+    "@zag-js/tooltip": "^0.31.1",
+    "apexcharts": "^3.44.2",
+    "elysia": "^0.7.30",
     "lucide-solid": "^0.292.0",
     "solid-apexcharts": "^0.3.2",
     "solid-js": "^1.8.5",
-    "valibot": "^0.20.1",
-    "vite-tsconfig-paths": "^4.2.1"
+    "valibot": "^0.20.1"
   },
   "devDependencies": {
     "typescript": "^5.3.2",
-    "vite": "^5.0.4",
-    "vite-plugin-checker": "^0.6.2",
-    "vite-plugin-solid": "^2.7.2",
+    "vite": "^5.0.7",
+    "vite-plugin-solid": "^2.8.0",
     "vite-plugin-solid-svg": "^0.7.0"
   }
 }
