--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -20,7 +20,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
 
     // plugin types
     "types": ["vite-plugin-solid-svg/types-component-solid"]
